tests/cases/syntax/error/types/string-type.soccam
(module string-type soccam
  (decl ([x "int"])
    (seq
     (:= x 1)
     (:= x 2)
    )))